css/index.css
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}
html {
	margin: 0 auto;
	width: 876px;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}




h1 {
	font-size: 60px;
	padding: 50px;
	text-align: left;
}

#startbutton {
	margin:10px;
	color: black;
	border: 1px solid black;
	display: inline;
	text-align: center;
    padding: 10px;
    



}

.div {
padding: 10px;
border: 10px;

}

.side-side {
	display: flex;
    margin: 10px;
   
    

}

.second {
	margin-bottom: 30px;
}

.middle-img {
	margin: 10px 0 10px 0;

}

.top-image {
    width: 40%;
    padding-bottom: 100px;


	


}
.logo {
	text-align: center;

}
.center {
	text-align:center;
}

.head-section {
    text-align: center;
    border-bottom: 2px black solid;
}

nav {
	width: 40%;
	display: flex;
	justify-content: space-between;

}

header {
	display: flex; 
	justify-content: space-between;

}
.header1 {
    width: 40%;
    padding-bottom: 100px;
    
    
}

.navigation {
	display: flex;
	justify-content: space-between;
    margin: 20px 0 35px 0;
    
	
}
footer {
	padding: 20px;
	text-align: center;
}

.space {
    display: flex;
    width: 60%;
    justify-content: space-between;

}



.innovation {
    text-align: center;
}

.contactadress {
    border-top: 2px black solid;
}

a {
    text-decoration: none;
    color: black;
    
}



@media (max-width:800px) {
    .navigation {
        display: flex;
        flex-direction: column-reverse;
         }

         .side-side{
        
        
            padding-top: 20px;
            padding-bottom: 10px;
            width: 86%;
            display: flex;
            align-items: center;
            padding-left: 50px;
            
        }

        .hide {
            display: none;
        }

        .space {
            display: flex;
            justify-content: center;
            width: 85%;
            justify-content: space-between;
            padding-left: 40px;
            
        
    
        }

        .logo {
            display: flex;
            margin: 0 auto;
            padding-top: 10px;
            padding-bottom: 20px;
    
    
        }

        .middle-img {
            width: 85%;
            padding-left: 50px;
            
        }

        .head-section {
        
            display:flex;
            align-items:center;
            flex-direction:column;
            height:400px;
            
            
        }
        #startbutton{
            padding-top: 10px;
            padding-right: 40px;
            padding-left:40px;
        }


        html {
            margin: 0 auto;
            width: 800px;
        }

        .contactadress {
            padding-left: 50px;
        }

        .container {
            width: 100%;
        }

}




        
  
        
    .innovation {
        
        text-align: center;
    }


    

@media (max-width:500px) {
    .container {
       width: 100%;
    }
    html {
        color: pink;
        margin: 0 auto;
	    width: 500px;

    }
    .logo {
        background: blue;
        display: flex;
        align-items: flex-start;
    }

    .space {
        border: 1px pink solid;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
       height: 500px;
        padding-top: 20px;
        padding-bottom: 20px;
        padding-left: 0px;
        padding-right: 0px;
        
    }

   
    .space a  {
        border-bottom: 1px solid black;
        width: 100%;
        display: flex;
        justify-content: center;
        padding-top: 5px;
        align-content: flex-start;
        height: 50px;
        
        
       
    }






}

